--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.0.11
   path: ^1.8.2
   cloud_firestore: ^4.3.1
+  share_plus: ^6.3.0
 
 dev_dependencies:
   flutter_test:
